<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".SignUpIn">

    <TextView
        android:id="@+id/sign_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:background="@color/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <FrameLayout
        android:id="@+id/fragment_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
    <TextView
        android:id="@+id/log_to_reg_tv"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:gravity="center"
        android:padding="16dp"
        android:text="@string/log_to_reg"
        android:textColor="@color/black"
        android:visibility="visible"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/reg_to_log_tv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/reg_to_log"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:textSize="20dp" />
    </RelativeLayout>
</LinearLayout>