<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment">

        <ScrollView
            android:padding="16dp"
            android:id="@+id/sign_iv_sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email_id"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittext_bg"
                        android:drawableRight="@drawable/ic_email"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="5dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/pass"
                        android:inputType="textPassword"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/remember_me" />

                    <TextView
                        android:id="@+id/forgot_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="forgot password?" />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signin_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_bg"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/or_sign_in_w"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

<!--                <com.google.android.gms.common.SignInButton-->
<!--                    android:id="@+id/google_signin_btn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" />-->

<!--                <com.facebook.login.widget.LoginButton-->
<!--                    android:id="@+id/fb_login_btn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    android:paddingTop="10dp"-->
<!--                    android:paddingBottom="10dp" />-->

            </LinearLayout>
        </ScrollView>
</FrameLayout>