<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/col1_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="2dp"
        app:cardElevation="3dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">
            <ImageView
                android:id="@+id/col1_iv"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.35"
                android:scaleType="centerCrop"
                android:src="@drawable/no_image"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:padding="5dp">

                <TextView
                    android:id="@+id/col1_prod_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text=""
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/col1_tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:maxLines="1"
                    android:text="@string/product_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/col1_tv_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/col1_tv_title"
                    android:maxLines="3"
                    android:minLines="3"
                    android:text="@string/product_description"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    />

                <TextView
                    android:layout_alignParentBottom="true"
                    android:id="@+id/mrp_cr_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_mrp"
                    android:background="@drawable/strike_thru"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/selprice_cr_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/mrp_cr_tv"
                    android:layout_marginLeft="8dp"
                    android:text="@string/cart_selprice"
                    android:textSize="16dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/col1_btn_add"
                    android:layout_width="70dp"
                    android:layout_height="20dp"
                    android:text="@string/add"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:background="@drawable/button_bg"
                    android:layout_alignParentEnd="true"
                    android:visibility="visible"/>

                <LinearLayout
                    android:id="@+id/col1_btn_added"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/card_bg"
                    android:visibility="invisible">

                    <ImageButton
                        android:id="@+id/remove_col1_ib"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_remove"
                        android:background="@drawable/imgbtn_bg"
                        />

                    <TextView
                        android:id="@+id/qtn_col1_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="0"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:gravity="center"/>

                    <ImageButton
                        android:id="@+id/add_col1_ib"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add"
                        android:background="@drawable/imgbtn_bg" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>