<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbars"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="5dp">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/card_bg"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:padding="5dp"
                            android:src="@drawable/ic_addr"
                            card_view:tint="@color/grey" />

                        <TextView
                            android:id="@+id/contus_tv_addr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="12dp"
                            android:textColor="@color/grey"
                            android:textSize="18dp"/>
                    </LinearLayout>

                    <View android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/grey"/>

                    <RelativeLayout
                        android:id="@+id/rel_lay_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/contact_img"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_centerVertical="true"
                            android:padding="5dp"
                            android:src="@drawable/ic_phone"
                            card_view:tint="@color/grey" />

                        <TextView
                            android:id="@+id/contact_no"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_toRightOf="@+id/contact_img"
                            android:gravity="center|left"
                            android:paddingLeft="8dp"
                            android:text="+91-11-47282233"
                            android:textColor="@color/black"
                            android:textSize="18dp"/>
                    </RelativeLayout>

                    <View android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/grey"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:padding="5dp"
                            android:src="@drawable/ic_whatsapp"
                            card_view:tint="@color/grey" />

                        <TextView
                            android:id="@+id/whatsapp_no"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center|left"
                            android:paddingLeft="8dp"
                            android:text="@string/dummy_ph_no"
                            android:textColor="@color/black"
                            android:textSize="18dp"/>
                    </LinearLayout>

                    <View android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/grey"/>

                    <RelativeLayout
                        android:id="@+id/rel_lay_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/email_img"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_centerVertical="true"
                            android:padding="5dp"
                            android:src="@drawable/ic_email"
                            card_view:tint="@color/grey"/>

                        <TextView
                            android:id="@+id/emailid"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_toRightOf="@+id/email_img"
                            android:gravity="center|left"
                            android:paddingLeft="8dp"
                            android:text="info@sugarSpirit.com"
                            android:textSize="18dp"/>
                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/card_bg"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/inq_with_us"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:padding="8dp"
                    android:background="@color/title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/u_f_nam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:singleLine="true"
                        android:textSize="16dp"/>



                    <EditText
                        android:id="@+id/u_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp"/>

                    <EditText
                        android:id="@+id/u_phn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/mob_no"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp"/>

                    <EditText
                        android:id="@+id/enquiry"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inq_cmnt"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/inq_submit"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bg"
                        android:text="Submit"
                        android:textColor="@color/white"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
